kubernetes-configuration/03-simple-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-first-service
spec:
  type: NodePort
  selector:
    name: my-app-1
  ports:
    - port: 80
      targetPort: 80
