kubernetes-configuration/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  # Configuration for tls in kubernetes
  # tls:
  #   - hosts:
  #       - kubernetes-dashboard.com
  #     secretName: kubernetes-dashboard-secret
  rules:
    - host: kubernetes-dashboard.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80

---
# apiVersion: v1
# kind: Secret
# metadata:
#   name: kubernetes-dashbord-secret
#   namespace: kubernetes-dashboard
# data:
#   tls.crt: ""
#   tls.key: ""
# type: kubernetes.io/tls
